<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:autofillHints="name"
        android:fontFamily="@font/gilroy"
        android:hint="@string/birthday_name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age"
        android:padding="20dp"
        android:layout_marginTop="72dp"
        android:autofillHints="age"
        android:fontFamily="@font/gilroy"
        android:inputType="numberSigned"
        android:hint="@string/age"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:autofillHints="wish"
        android:fontFamily="@font/gilroy"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:hint="@string/wishes"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age" />

    <RadioGroup
        android:layout_width="233dp"
        android:layout_height="150dp"
        android:id="@+id/pictures"
        android:layout_marginTop="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/alien"
            android:layout_width="match_parent"
            android:checked="true"
            android:fontFamily="@font/gilroy"
            android:layout_height="wrap_content"
            android:text="@string/alien" />

        <RadioButton
            android:id="@+id/dog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy"
            android:text="@string/dog" />

        <RadioButton
            android:id="@+id/cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy"
            android:text="@string/cat" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/gilroy"
        android:text="@string/submit"
        android:id="@+id/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictures" />


</androidx.constraintlayout.widget.ConstraintLayout>